Fixed empty calendar name being valid, apply changes immediately layout fixed on mobile, fixed other apply changes bugs

--- a/resources/sass/calendar/inputs.scss
+++ b/resources/sass/calendar/inputs.scss
@@ -1036,6 +1036,8 @@ ol.example li.placeholder:before {
     z-index: 11;
     position:fixed;
     align-items: center;
+    text-align:center;
+    overflow:hidden;
     display:none;
 }
 
